--- a/05_JavaScript_Advanced/07_DomIntroduction_Lab/05_tamplate.html
+++ b/05_JavaScript_Advanced/07_DomIntroduction_Lab/05_tamplate.html
@@ -13,6 +13,6 @@
     <tr><td>Tedy</td><td>Varna</td></tr>
 </table>
 <button onclick="colorize()">Colorize</button>
-<script src="ColorizeTable.js"></script>
+<script src="05_ColorizeTable.js"></script>
 </body>
 </html>
