--- a/05_JavaScript_Advanced/07_DomIntroduction_Lab/06_tamplate.html
+++ b/05_JavaScript_Advanced/07_DomIntroduction_Lab/06_tamplate.html
@@ -15,6 +15,6 @@
     </tbody>
 </table>
 <button onclick="sumTable()">Sum</button>
-<script src="SumTable.js"></script>
+<script src="06_SumTable.js"></script>
 </body>
 </html>
