--- a/05_JavaScript_Advanced/08_DomIntroduction_Exercise/07_index.html
+++ b/05_JavaScript_Advanced/08_DomIntroduction_Exercise/07_index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="07_style.css">
 </head>
 
 <body onload="solve()">
@@ -31,7 +31,7 @@
         </div>
 
     </section>
-    <script src="./app.js"></script>
+    <script src="07_app.js"></script>
 </body>
 
 </html>
